# LatestPkgVersion

./: LICENSE  Main.hs  cabal.config  cabal.sandbox.config  latest-pkg-version.cabal
