name:                latest-pkg-version
version:             0.1.0.0
synopsis:            A command line program to find the latest package versions
description:         A command line program to find the latest package versions
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable latest-pkg-versions
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , tagsoup
                     , HTTP
                     , parsec
  default-language:    Haskell2010
